--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     
         <div class="main-footer__lower">
           &copy; Copyright 2023. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
+          <a rel="noreferrer" target="_blank" https://nirajprajapati.netlify.app/"
             >Niraj Prajapati</a
           >
         </div>
