--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#contact" class="header__link"> Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a class="header__link" aria-label="Open Niraj's resume in a new tab" href="C:\Users\hp\Desktop\Portfolio\Niraj_prajapati_Resume.pdf" target="_blank"
+              <a class="header__link" aria-label="Open Niraj's resume in a new tab" href="https://github.com/Niraj07prajapati/portfolio/blob/main/niraj_Updated_Resume.pdf" target="_blank"
               class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i>Resume</a>
             </li>
           </ul>
