--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
-              src="./hamburger-menu.svg"
+              src="hamburger-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
               onclick="toggleMenu()"
             />
             <img
-              src="./hamburger-menu-svgrepo-com.svg"
+              src="hamburger-menu-svgrepo-com.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
               onclick="toggleMenu()"
