--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 Explore the beauty of exotic destinations with our Tourism Website. Discover travel itineraries, find accommodation options, and plan your dream vacation.
               </p>
               <a
-                href="./project-tourism.html"
+                href="https://github.com/Niraj07prajapati/Tourism"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -238,7 +238,7 @@
                 Embrace wellness with our Yoga Website. Access yoga routines, meditation guides, and health tips. Enhance your physical and mental well-being with our interactive platform.
               </p>
               <a
-                href="./project-yoga.html"
+                href="https://github.com/Niraj07prajapati/Tourism"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -262,7 +262,7 @@
                 Elevate your movie-watching experience with our Recommendation System. Discover personalized movie suggestions based on your preferences and enjoy a curated selection of films.
               </p>
               <a
-                href="./project-movie.html"
+                href="https://github.com/Niraj07prajapati/Ml_Project"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
